--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "node-fetch": "^2.7.0",
-    "redux": "^5.0.0"
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0"
   }
 }
