--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
