--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "back-end",
+  "name": "lws-json-server-todos",
+  "description": "Example in memory todos api with json-server by Learn with Sumit",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db_todos.json --no-cors true --port 9000"
+    "start": "json-server --watch db.json --no-cors true  --port 9000"
+  },
+  "dependencies": {
+    "json-server": "^0.17.1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "json-server": "^0.17.4"
-  }
+  "author": "Sumit Saha, Learn with Sumit"
 }
